--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
     </div>
     <div class="main-container">
         <div class="container">
-            <h1>Генератор Ключей Hamster Kombat</h1>
-            <label for="gameSelect" id="gameSelectLabel">Выберите игру для генерации ключа:</label>
+            <h1> Hamster Kombat All Game Key Generator</h1>
+            <label for="gameSelect" id="gameSelectLabel">Select a game to generate a key::</label>
             <select id="gameSelect">
                 <option value="MyCloneArmy">My Clone Army</option>
                 <option value="ChainCube2048">Chain Cube 2048</option>
                 <option value="TrainMiner">Train Miner</option>
                 <option value="BikeRide3D">Bike Ride 3D</option>
             </select>
-            <label for="keyCountSelect" id="keyCountLabel">Выберите количество ключей для генерации:</label>
+            <label for="keyCountSelect" id="keyCountLabel">Select the number of keys to generate:</label>
             <select id="keyCountSelect">
                 <option value="1">1</option>
                 <option value="2">2</option>
