--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
                 <option value="11">11</option>
                 <option value="12">12</option>
             </select>
-            <button id="startBtn" class="button">Сгенерировать ключи</button>
+            <button id="startBtn" class="button">Generate Keys</button>
             <div id="progressContainer" class="progress-container hidden">
                 <div id="progressBar" class="progress-bar"></div>
                 <span id="progressText" class="progress-text">0%</span>
             </div>
             <div id="keyContainer" class="key-container hidden">
-                <h2 id="generatedKeysTitle">Сгенерированные ключи:</h2>
-                <button id="copyAllBtn" class="button hidden">Скопировать все ключи</button>
+                <h2 id="generatedKeysTitle">Generated Keys:</h2>
+                <button id="copyAllBtn" class="button hidden">Сopy all key</button>
                 <div id="keysList" class="keys-list"></div>
             </div>
         </div>
-        <button id="creatorChannelBtn" class="button footer-button">Powered by Project PDoSI</button>
+        <button id="creatorChannelBtn" class="button footer-button">Join Us</button>
     </div>
     <script src="script.js"></script>
 </body>
