--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div id="keysList" class="keys-list"></div>
             </div>
         </div>
-        <button id="creatorChannelBtn" class="button footer-button">Join Us</button>
+        <button id="creatorChannelBtn" class="button footer-button">Please Join Us For more Scripts</button>
     </div>
     <script src="script.js"></script>
 </body>
