--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <span id="progressText" class="progress-text">0%</span>
             </div>
             <div id="keyContainer" class="key-container hidden">
-                <h2 id="generatedKeysTitle">Generated Key(s):</h2>
+                <h2 id="generatedKeysTitle">Generated key(s):</h2>
                 <button id="copyAllBtn" class="button hidden">Сopy all keys</button>
                 <div id="keysList" class="keys-list"></div>
             </div>
