--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="main-container">
         <div class="container">
-            <h1> Hamster Kombat All Game Key Generator</h1>
+            <h1> Hamster Kombat Key Generator</h1>
             <label for="gameSelect" id="gameSelectLabel">I game duh thlang rawh:</label>
             <select id="gameSelect">
                 <option value="MyCloneArmy">My Clone Army</option>
