--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
                 <span id="progressText" class="progress-text">0%</span>
             </div>
             <div id="keyContainer" class="key-container hidden">
-                <h2 id="generatedKeysTitle">Generated key(s):</h2>
-                <button id="copyAllBtn" class="button hidden">Сopy all keys</button>
-                <div id="keysList" class="keys-list"></div>
+                <h2 id="generatedKeysTitle">Generated key:</h2>
+                
             </div>
         </div>
         <button id="creatorChannelBtn" class="button footer-button">Made by RSR</button>
