--- a/index.html
+++ b/index.html
@@ -26,17 +26,18 @@
                 <option value="BikeRide3D">Bike Ride 3D</option>
             </select>
             
-            <button id="startBtn" class="button">Generate</button>
+            <button id="startBtn" class="button">Generate Keys</button>
             <div id="progressContainer" class="progress-container hidden">
                 <div id="progressBar" class="progress-bar"></div>
                 <span id="progressText" class="progress-text">0%</span>
             </div>
             <div id="keyContainer" class="key-container hidden">
-                <h2 id="generatedKeysTitle">Generated key:</h2>
-                
+                <h2 id="generatedKeysTitle">Generated Keys:</h2>
+                <button id="copyAllBtn" class="button hidden">Сopy all key</button>
+                <div id="keysList" class="keys-list"></div>
             </div>
         </div>
-        <button id="creatorChannelBtn" class="button footer-button">Made by RSR</button>
+        <button id="creatorChannelBtn" class="button footer-button">Please Join Us For more Scripts</button>
     </div>
     <script src="script.js"></script>
 </body>
