--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                 <option value="BikeRide3D">Bike Ride 3D</option>
             </select>
             
-            <button id="startBtn" class="button">Generate Keys</button>
+            <button id="startBtn" class="button">Generate</button>
             <div id="progressContainer" class="progress-container hidden">
                 <div id="progressBar" class="progress-bar"></div>
                 <span id="progressText" class="progress-text">0%</span>
             </div>
             <div id="keyContainer" class="key-container hidden">
-                <h2 id="generatedKeysTitle">Generated Keys:</h2>
+                <h2 id="generatedKeysTitle">Generated Key:</h2>
                 <button id="copyAllBtn" class="button hidden">Сopy all key</button>
                 <div id="keysList" class="keys-list"></div>
             </div>
