--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                 <option value="TrainMiner">Train Miner</option>
                 <option value="BikeRide3D">Bike Ride 3D</option>
             </select>
-            <label for="keyCountSelect" id="keyCountLabel">I generat
-                e duh zat thlang leh rawh:</label>
+            <label for="keyCountSelect" id="keyCountLabel">I generate duh zat thlang leh rawh:</label>
             <select id="keyCountSelect">
                 <option value="1">1</option>
                 <option value="2">2</option>
