--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <option value="4">4</option>
             </select>
             <button id="startBtn" class="button">Generate</button>
+            <button id="reloadBtn" class="button hidden">Reload</button>
             <div id="progressContainer" class="progress-container hidden">
                 <div id="progressBar" class="progress-bar"></div>
                 <span id="progressText" class="progress-text">0%</span>
