--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <option value="4">4</option>
             </select>
             <button id="startBtn" class="button">Generate</button>
-            <a id="reloadBtn" class="button hidden" href="https://zohlathu.github.io/bdbdkakabdbsjs/">Reload</a>
+            <button id="reloadBtn" class="button hidden" onclick="window.location.href='https://zohlathu.github.io/bdbdkakabdbsjs/'">Reload</button>
 
             <div id="progressContainer" class="progress-container hidden">
                 <div id="progressBar" class="progress-bar"></div>
