--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <option value="4">4</option>
             </select>
             <button id="startBtn" class="button">Generate</button>
-            <button id="reloadBtn" class="button hidden" onclick="window.location.href='https://example.com'">Restart</button>
+            
     
             <div id="progressContainer" class="progress-container hidden">
                 <div id="progressBar" class="progress-bar"></div>
@@ -44,6 +44,7 @@
                 <div id="keysList" class="keys-list"></div>
             </div>
         </div>
+        <button id="reloadBtn" class="button hidden" onclick="window.location.href='https://example.com'">Restart</button><br/>
         <button id="creatorChannelBtn" class="button footer-button">Made by RSR</button>
     </div>
     <script src="script.js"></script>
