--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div id="keysList" class="keys-list"></div>
             </div>
         </div>
-        <button id="reloadBtn" class="button hidden" onclick="window.location.href='https://example.com'">Restart</button><br/>
+        <button id="reloadBtn" class="button hidden" onclick="window.location.href='https://zohlathu.github.io/bdbdkakabdbsjs/'">Restart</button><br/>
         <button id="creatorChannelBtn" class="button footer-button">Made by RSR</button>
     </div>
     <script src="script.js"></script>
