--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div id="keysList" class="keys-list"></div>
             </div>
         </div>
-        <button id="reloadBtn" class="buttonrst">Restart</button><br/>
+        <br/><br/><button id="reloadBtn" class="buttonrst">Restart</button><
         <button id="creatorChannelBtn" class="button footer-button">Made by RSR</button>
     </div>
     <script src="script.js"></script>
