--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <option value="3">3</option>
                 <option value="4">4</option>
             </select>
-            <button id="startBtn" class="button">Generate</button>
+            <button id="startBtn" class="button footer-button">Generate</button>
             
     
             <div id="progressContainer" class="progress-container hidden">
@@ -44,7 +44,7 @@
                 <div id="keysList" class="keys-list"></div>
             </div>
         </div>
-        <br/><br/><button id="reloadBtn" class="button">Restart</button><
+        <br/><br/><button id="reloadBtn" class="button footer-button">Restart</button><
         <button id="creatorChannelBtn" class="button footer-button">Made by RSR</button>
     </div>
     <script src="script.js"></script>
