--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div id="keyContainer" class="key-container hidden">
                 <h2 id="generatedKeysTitle">Generated key(s):</h2>
-                <button id="copyAllBtn" class="button hidden">Сopy all keys</button>
+                <button id="copyAllBtn" class="buttonall">Сopy all keys</button>
                 <div id="keysList" class="keys-list"></div>
             </div>
         </div>
