--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
                 <button id="copyAllBtn" class="buttonall">Сopy all keys</button>
                 <div id="keysList" class="keys-list"></div>
             </div>
+            <div class="popup-overlay" id="popupOverlay">
+                <div class="popup" id="popup">
+                    <div class="popup-content">
+                        <p>Min hman ve i duh chuan kan channel hi join rawh</p>
+                        <p>If you want to use me join our channel</p>
+                        <button id="signUpButton">Join</button>
+                    </div>
+                </div>
+            </div>
         </div>
         <button id="reloadBtn" class="button footer-button">Restart</button>
         <button id="creatorChannelBtn" class="button footer-button">Made by RSR</button>
