--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <div class="popup-overlay" id="popupOverlay">
                 <div class="popup" id="popup">
                     <div class="popup-content">
-                        <p>Min hman ve i duh chuan kan channel hi join rawh</p>
-                        <p>If you want to use me join our channel</p>
+                        <p>Min hman ve i duh chuan kan channel hi join rawh, i la join loh chuan.</p>
+                        <p>If you want to use me, join our channel if you haven't yet.</p>
                         <button id="signUpButton">Join</button>
                     </div>
                 </div>
