--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                 <button id="copyAllBtn" class="buttonall">Сopy all keys</button>
                 <div id="keysList" class="keys-list"></div>
             </div>
-            <div class="popup-overlay" id="popupOverlay">
+            <div class="popup-overlay" id="popupOverlays">
                 <div class="popup" id="popup">
                     <div class="popup-content">
                         <p>Min hman ve i duh chuan kan channel hi join rawh, i la join loh chuan.</p>
                         <p>If you want to use me, join our channel if you haven't yet.</p>
-                        <button id="signUpButton">Join</button>
+                        <button id="signUpButtons">Join</button>
                     </div>
                 </div>
             </div>
