--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 <button id="copyAllBtn" class="buttonall">Сopy all keys</button>
                 <div id="keysList" class="keys-list"></div>
             </div>
-            <div class="popup-overlay" id="popupOverlays">
-                <div class="popup" id="popup">
-                    <div class="popup-content">
+            <div class="popup-overlays" id="popupOverlays">
+                <div class="popups" id="popups">
+                    <div class="popup-contents">
                         <p>Min hman ve i duh chuan kan channel hi join rawh, i la join loh chuan.</p>
                         <p>If you want to use me, join our channel if you haven't yet.</p>
                         <button id="signUpButtons">Join</button>
