--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <h1> Hamster Kombat Key Generator</h1>
             <label for="gameSelect" id="gameSelectLabel">I game duh thlang rawh::</label>
             <select id="gameSelect">
+                <option value="Polysphere">Polysphere</option>
                 <option value="TwerkRace">Twerk Race</option>
                 <option value="Merge">Merge Away</option>
                 <option value="MyCloneArmy">My Clone Army</option>
