--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <h1> Hamster Kombat Key Generator</h1>
             <label for="gameSelect" id="gameSelectLabel">I game duh thlang rawh::</label>
             <select id="gameSelect">
+                <option value="CafeDash">Cafe Dash</option>
                 <option value="MnT">Mow and Trim</option>
                 <option value="Mudracing">Mud Racing</option>
                 <option value="Polysphere">Polysphere</option>
