--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <h1> Hamster Kombat Key Generator</h1>
             <label for="gameSelect" id="gameSelectLabel">I game duh thlang rawh::</label>
             <select id="gameSelect">
+                <option value="ZooP">Zoopolis</option>
+                <option value="GangsW">Gangs War</option>
                 <option value="CafeDash">Cafe Dash</option>
                 <option value="MnT">Mow and Trim</option>
                 <option value="Mudracing">Mud Racing</option>
