--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <label for="gameSelect" id="gameSelectLabel">I game duh thlang rawh::</label>
             <select id="gameSelect">
                 <option value="ZooP">Zoopolis</option>
-                <option value="GangsW">Gangs War</option>
+                <option value="GangsW">Gangs Wars</option>
                 <option value="CafeDash">Cafe Dash</option>
                 <option value="MnT">Mow and Trim</option>
                 <option value="Mudracing">Mud Racing</option>
