--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <h1> Hamster Kombat Key Generator</h1>
             <label for="gameSelect" id="gameSelectLabel">I game duh thlang rawh::</label>
             <select id="gameSelect">
+                <option value="FluffC">Fluff Crusade</option>
+                <option value="TileTrio">Tile Trio</option>
                 <option value="ZooP">Zoopolis</option>
                 <option value="GangsW">Gangs Wars</option>
                 <option value="CafeDash">Cafe Dash</option>
